# harry-potter

./: .gitignore  README.md  game.py  pyproject.toml
src/hogwarts_game/: __init__.py  __main__.py  config.py  main.py
src/hogwarts_game/ai/: __init__.py  client.py  world_ai.py
src/hogwarts_game/content/: areas.yaml  locations.yaml  npcs.yaml  rumors.yaml  shops.yaml
src/hogwarts_game/domain/: lore.py  models.py
src/hogwarts_game/engine/: commands.py  game.py  saves.py
src/hogwarts_game/ui/: render.py  theme.py
tests/: test_commands.py  test_dynamic_regions.py  test_game_helpers.py  test_lore.py  test_saves.py
